default/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Homepage is a self-hosted dashboard application built with Node.js, Express, and React. It provides a customizable interface for managing and accessing your self-hosted applications and services, with features like resource monitoring, search functionality, and support for multiple users.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Core Services
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: "homepage.homelab.heyser.xyz"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
