default/homepage/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tailscale
spec:
  defaultBackend:
    service:
      name: homepage
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
  - hosts:
    - homepage
